--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "install": "npm install"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "vite": "^6.0.7"
