Simplify Vercel config for Vite

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,7 +1,4 @@
 {
-  "rewrites": [
-    { "source": "/", "destination": "/index.html" },
-    { "source": "/signup", "destination": "/signup.html" },
-    { "source": "/dashboard", "destination": "/dashboard.html" }
-  ]
+  "cleanUrls": true,
+  "trailingSlash": false
 }
