--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,11 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
+    "express-validator": "^7.3.1",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^6.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
