--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,18 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
+    "recharts": "^2.10.3"
+  },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
     "vite": "^6.0.7"
   }
 }
