--- a/render.yaml
+++ b/render.yaml
@@ -2,17 +2,12 @@ services:
   - type: web
     name: eventease-backend
     env: node
-    buildCommand: cd backend && npm install && npx prisma generate
+    buildCommand: cd backend && npm install && npx prisma generate && npx prisma migrate deploy
     startCommand: cd backend && npm start
     envVars:
       - key: DATABASE_URL
         sync: false
-  
-  - type: web
-    name: eventease-frontend
-    env: static
-    buildCommand: cd frontend && npm install && npm run build
-    staticPublishPath: frontend/dist
-    envVars:
-      - key: VITE_API_URL
+      - key: JWT_SECRET
         sync: false
+      - key: NODE_ENV
+        value: production
