--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.15.3",
     "prisma": "^6.1.0"
   },
   "devDependencies": {
